--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -1,6 +1,10 @@
-<h2>Books</h2>
-    <ul>
-        {% for book in books %}
-            <li>{{ book.title }}</li>
-        {% endfor %}
-    </ul>
+{% extends "books/base.html" %} {% block content %}
+<header>
+  <div class="header-content">
+    <h2>Explore The Library</h2>
+    <div class="line"></div>
+    <h1>A BOOK FOR YOU</h1>
+    <a href="{% url 'books_library' %}" class="btn">Library</a>
+  </div>
+</header>
+{% endblock content %}
