--- a/books/templates/books/library.html
+++ b/books/templates/books/library.html
@@ -1,13 +1,24 @@
-{% extends "books/base.html" %} {% block content %}
-<h1>Books</h2>
-{% for book in books %}
-<article>
-    <h2>{{book.title}}</h2>
-    <p>{{book.author}}</p>
-    <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
-    <small>{{book.date_posted|date:'l d-m-y'}}</small>
-    <img src="{{ book.image.url }}" alt="no photo">
-</article>
-{% endfor %}
+{% extends "books/base.html" %} {% load static %} {% block content %}
+<!-- Books -->
+<section class="books">
+  <div class="title">
+    <h1>Books</h1>
+    <div class="line"></div>
+  </div>
+  {% for book in books %}
+  <div class="row">
+    <div class="col">
+      <img src="{{ book.image.url }}" alt="no photo" />
+      <h4>Title: {{ book.title }}</h4>
+      <h5>Author: {{ book.author }}</h5>
+      <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
+      <h6>Posted: {{ book.date_posted|date:'l d-m-y' }}</h6>
+      <a href="#" class="btn">Learn More</a>
+    </div>
+  </div>
+  {% endfor %}
+</section>
 {% endblock content %}
 
+
+<!-- https://www.youtube.com/watch?v=ZdJSHEczi_0 -->
