--- a/books/static/books/main.css
+++ b/books/static/books/main.css
@@ -121,11 +121,14 @@ section {
 }
 
 .row .col img {
-  width: 300px;
-  height: 300px;
+  max-width: 100%; /*250px*/
+  max-height: auto; /*250px*/
+  width: 200px;
+  height: 200px;
+  /* width: 100%; */
+  /* height: auto; */
   border-radius: 5%;
   /* napravi width-a : 50% za da e resposnive snimkata, no predi tova sled upload bii 200px 200px */
-  /* width: 50%; */
 }
 
 .row .col {
