--- a/books/templates/books/library.html
+++ b/books/templates/books/library.html
@@ -12,7 +12,7 @@
       <h4>Title: {{ book.title }}</h4>
       <h5>Author: {{ book.author }}</h5>
       <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
-      <h6>Posted: {{ book.date_posted|date:'l d-m-y' }}</h6>
+      <!-- <h6>Posted: {{ book.date_posted|date:'l d-m-y' }}</h6> -->
       <a href="#" class="btn">Learn More</a>
     </div>
   </div>
