--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -25,9 +25,9 @@
         {% if user.is_authenticated %}
         <li class="btn"><a href="#">New Book</a></li>
         <li class="btn"><a href="#">My Books</a></li>
-        <li class="btn"><a href="#">Logout</a></li>
+        <li class="btn"><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
-        <li class="btn"><a href="#">Login</a></li>
+        <li class="btn"><a href="{% url 'login' %}">Login</a></li>
         <li class="btn"><a href="#">Register</a></li>
         {% endif %}
       </ul>
