--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -12,6 +12,13 @@
       type="text/css"
       href="{% static 'books/main.css' %}"
     />
+    <!-- BOOTSTRAP -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <title>Library</title>
   </head>
   <body>
@@ -23,12 +30,12 @@
         <li class="btn"><a href="{% url 'books_library' %}">Library</a></li>
         <li class="btn"><a href="{% url 'books_about' %}">About</a></li>
         {% if user.is_authenticated %}
-        <li class="btn"><a href="#">New Book</a></li>
+        <li class="btn"><a href="{% url 'books_create' %}">New Book</a></li>
         <li class="btn"><a href="#">My Books</a></li>
         <li class="btn"><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
         <li class="btn"><a href="{% url 'login' %}">Login</a></li>
-        <li class="btn"><a href="#">Register</a></li>
+        <li class="btn"><a href="{% url 'register' %}">Register</a></li>
         {% endif %}
       </ul>
       <img
@@ -40,13 +47,11 @@
 
     {% block content %}{% endblock %}
 
-    <script>
-      const menuBtn = document.querySelector('.menu-btn');
-      const navlinks = document.querySelector('.nav-links');
-
-      menuBtn.addEventListener('click', () => {
-        navlinks.classList.toggle('mobile-menu');
-      });
-    </script>
+    <!-- BOOTSTRAP -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
