--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,7 +1,7 @@
 {% extends "books/base.html" %} 
   {% load crispy_forms_tags %}
   {% block content %}
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
       <!-- A CSRF token is a secure random token 
         (e.g., synchronizer token or challenge token) that is used to prevent CSRF attacks. -->
       {% csrf_token %}
@@ -9,6 +9,6 @@
       <!-- crispy form filter -->
       <!-- use crispy tag -->
       {{ form|crispy }}
-      <button type="submit">Sign In</button>
+      <button type="submit">Share</button>
     </form>
   {% endblock content%}
