--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,6 +9,6 @@
       <!-- crispy form filter -->
       <!-- use crispy tag -->
       {{ form|crispy }}
-      <button type="submit">Sign In</button>
+      <button type="submit">Sign Up</button>
     </form>
   {% endblock content%}
