--- a/books/templates/books/library.html
+++ b/books/templates/books/library.html
@@ -13,7 +13,7 @@
       <h5>Author: {{ book.author }}</h5>
       <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
       <!-- <h6>Posted: {{ book.date_posted|date:'l d-m-y' }}</h6> -->
-      <a href="#" class="btn">Learn More</a>
+      <a href="{% url 'book_details' book.pk %}" class="btn">Learn More</a>
     </div>
   </div>
   {% endfor %}
