--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="{% static 'books/main.css' %}"
-    />
+    /> -->
     <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -23,26 +23,21 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar">
-      <h1 class="logo"><a href="{% url 'books_library' %}">EXPLORE</a></h1>
-      <ul class="nav-links">
-        <li class="btn"><a href="{% url 'books_home' %}">Home</a></li>
-        <li class="btn"><a href="{% url 'books_library' %}">Library</a></li>
-        <li class="btn"><a href="{% url 'books_about' %}">About</a></li>
+    <nav>
+      <h1><a href="{% url 'books_library' %}">EXPLORE</a></h1>
+      <ul>
+        <li><a href="{% url 'books_home' %}">Home</a></li>
+        <li><a href="{% url 'books_library' %}">Library</a></li>
+        <li><a href="{% url 'books_about' %}">About</a></li>
         {% if user.is_authenticated %}
-        <li class="btn"><a href="{% url 'books_create' %}">New Book</a></li>
-        <li class="btn"><a href="{% url 'my_books' %}">My Books</a></li>
-        <li class="btn"><a href="{% url 'logout' %}">Logout</a></li>
+        <li><a href="{% url 'books_create' %}">New Book</a></li>
+        <li><a href="{% url 'my_books' %}">My Books</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
-        <li class="btn"><a href="{% url 'login' %}">Login</a></li>
-        <li class="btn"><a href="{% url 'register' %}">Register</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'register' %}">Register</a></li>
         {% endif %}
       </ul>
-      <img
-        src="{% static 'books/img/menu-btn.png' %}"
-        alt=""
-        class="menu-btn"
-      />
     </nav>
     {% if messages %}
       {% for message in messages %}
