added utils for image resize

--- a/books/templates/books/my_books.html
+++ b/books/templates/books/my_books.html
@@ -2,7 +2,7 @@
 <!-- Books -->
 <section class="books">
   <div class="title">
-    <h1>Books</h1>
+    <h1>My Books</h1>
     <div class="line"></div>
   </div>
   {% for book in books %}
