--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -1,10 +1,9 @@
 {% extends "books/base.html" %} {% block content %}
-<header>
-  <div class="header-content">
+<section>
+  <div>
     <h2>Explore The Library</h2>
-    <div class="line"></div>
     <h1>A BOOK FOR YOU</h1>
-    <a href="{% url 'books_library' %}" class="btn">Library</a>
+    <a href="{% url 'books_library' %}">Library</a>
   </div>
-</header>
+</section>
 {% endblock content %}
