--- a/books/templates/books/library.html
+++ b/books/templates/books/library.html
@@ -1,24 +1,20 @@
 {% extends "books/base.html" %} {% load static %} {% block content %}
 <!-- Books -->
-<section class="books">
-  <div class="title">
+<section>
+  <div>
     <h1>Books</h1>
-    <div class="line"></div>
   </div>
   {% for book in books %}
-  <div class="row">
-    <div class="col">
-      <img src="{{ book.image.url }}" alt="no photo" />
-      <h4>Title: {{ book.title }}</h4>
-      <h5>Author: {{ book.author }}</h5>
-      <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
-      <!-- <h6>Posted: {{ book.date_posted|date:'l d-m-y' }}</h6> -->
-      <a href="{% url 'book_details' book.pk %}" class="btn">Learn More</a>
-    </div>
+  <div >
+    <img src="{{ book.image.url }}" alt="no photo" />
+    <h4>Title: {{ book.title }}</h4>
+    <h5>Author: {{ book.author }}</h5>
+    <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
+    <!-- <h6>Posted: {{ book.date_posted|date:'l d-m-y' }}</h6> -->
+    <a href="{% url 'book_details' book.pk %}">Learn More</a>
   </div>
   {% endfor %}
 </section>
 {% endblock content %}
-
 
 <!-- https://www.youtube.com/watch?v=ZdJSHEczi_0 -->
