--- a/books/templates/books/library.html
+++ b/books/templates/books/library.html
@@ -1,18 +1,10 @@
-{% extends "books/base.html" %} {% load static %} {% block content %}
-<!-- Books -->
-<section>
-  <div>
-    <h1>Books</h1>
-  </div>
-  {% for book in books %}
-  <div >
-    <img src="{{ book.image.url }}" alt="no photo" />
-    <h4>Title: {{ book.title }}</h4>
-    <h5>Author: {{ book.author }}</h5>
-    <a href="{% url 'book_details' book.pk %}">Learn More</a>
-  </div>
-  {% endfor %}
-</section>
+{% extends "books/base.html" %} 
+{% block content %}
+  <section>
+    <div>
+      <h1>Books</h1>
+    </div>
+    {% include 'books/list_books.html' %}
+  </section>
 {% endblock content %}
 
-<!-- https://www.youtube.com/watch?v=ZdJSHEczi_0 -->
