--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -9,6 +9,6 @@
   <h4>Posted by: {{ object.posted_by }}</h4>
   <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
   <!-- object.date_posted|date:'l d-m-y' -->
-  <h5>Date_posted: {{ object.date_posted }}</h5>
+  <h5>Date_posted: {{ object.date_posted|date:'l d-m-y' }}</h5>
 </section>
 {% endblock content %}
