--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -10,5 +10,12 @@
   <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
   <!-- object.date_posted|date:'l d-m-y' -->
   <h5>Date_posted: {{ object.date_posted|date:'l d-m-y' }}</h5>
+  {% if object.posted_by == user or user.is_superuser %}
+    <div>
+      <a href="{% url 'books_update' object.id %}">Update Post</a>
+      <a href='#'>Delete Post</a>
+    </div>
+  {% endif %}
 </section>
+
 {% endblock content %}
