--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -12,7 +12,7 @@
       type="text/css"
       href="{% static 'books/main.css' %}"
     /> -->
-    <!-- BOOTSTRAP -->
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,7 +47,7 @@
     {% endif %}
     {% block content %}{% endblock %}
 
-    <!-- BOOTSTRAP -->
+    <!-- BOOTSTRAP JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
