--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -3,7 +3,7 @@
   {% block content %}
     <form method="POST">
       {% csrf_token %}
-      <h2>Are you sure you want to delete "{{object.title}}" book?</h2>
+      <h2>Are you sure you want to delete this book: "{{object.title}}"?</h2>
       <button type="submit">Delete</button>
       <a href="{% url 'book_details' object.id %}">Cancel</a>
     </form>
