--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -22,30 +22,57 @@
     <title>Library</title>
   </head>
   <body>
-    <!-- NAVBAR -->
-    <nav>
-      <h1><a href="{% url 'books_library' %}">EXPLORE</a></h1>
-      <ul>
-        <li><a href="{% url 'books_home' %}">Home</a></li>
-        <li><a href="{% url 'books_library' %}">Library</a></li>
-        <li><a href="{% url 'books_about' %}">About</a></li>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'books_create' %}">New Book</a></li>
-        <li><a href="{% url 'my_books' %}">My Books</a></li>
-        <li><a href="{% url 'logout' %}">Logout</a></li>
-        {% else %}
-        <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="{% url 'register' %}">Register</a></li>
-        {% endif %}
-      </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a href="{% url 'books_library' %}" class="navbar-brand">EXPLORE</a>
+
+        <button 
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navmenu"
+        >
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="{% url 'books_home' %}" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'books_about' %}" class="nav-link">About</a>
+            </li>
+          </ul>
+          <!-- ms-auto -> https://stackoverflow.com/questions/41513463/bootstrap-align-navbar-items-to-the-right -->
+          <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a href="{% url 'books_create' %}" class="nav-link">New Book</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'my_books' %}" class="nav-link">My Books</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a href="{% url 'login' %}" class="nav-link">Login</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'register' %}" class="nav-link">Sign Up</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
     </nav>
-    {% if messages %}
-      {% for message in messages %}
-      <!-- message.tags -> success, warning, error matches bootstrap alerts -->
-        <div class="alert alert-{{ message.tags }}">{{ message }}</div> 
-      {% endfor %}
-    {% endif %}
-    {% block content %}{% endblock %}
+
+    {% if messages %} {% for message in messages %}
+    <!-- message.tags -> success, warning, error matches bootstrap alerts -->
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %} {% endif %} {% block content %}{% endblock %}
 
     <!-- BOOTSTRAP JavaScript -->
     <script
