styling forms / btns

--- a/books/static/books/main.css
+++ b/books/static/books/main.css
@@ -7,220 +7,13 @@
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-ul {
-  list-style: none;
-}
-body,
-html {
-  overflow-x: hidden;
-}
 
-/* NAVBAR */
+/* Modify the background color */
 .navbar {
-  /* width: 100vw;
-  height: 100vh; */
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  padding: 20px;
-  color: whitesmoke;
-  border-radius: 30px;
-}
-.nav-links {
-  display: flex;
-  align-items: center;
-}
-.nav-links li {
-  margin: 0 30px;
-}
-
-header {
-  width: 100vw;
-  height: 100vh;
-  background-image: url('img/default.jpg');
-  background-position: bottom;
-  background-size: cover;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-}
-
-.header-content {
-  margin-bottom: 70px;
-  color: whitesmoke;
-  text-align: center;
-}
-
-.header-content h2 {
-  font-size: 4vmin;
-}
-
-.line {
-  width: 150px;
-  height: 4px;
-  background: crimson;
-  margin: 10px auto;
   border-radius: 5px;
 }
 
-.header-content h1 {
-  font-size: 7vmin;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.btn {
-  /* 8px top and bottom 15px left and right */
-  padding: 8px 15px;
-  background: crimson;
-  border-radius: 30px;
-  color: whitesmoke;
-  font-size: 30px;
-}
-
-.menu-btn {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  width: 50px;
-  cursor: pointer;
-  display: none;
-}
-
-li.btn {
-  background: rgb(253, 253, 253);
-  color: crimson;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-/* Books */
-.books {
-  width: 80%;
-  margin: 80px auto;
-}
-
-.title {
-  text-align: center;
-  font-size: 4vmin;
-  /* color: darkblue; */
-}
-.row {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  /* justify-content: space-between; */
-  justify-content: space-around;
-}
-
-.row .col img {
-  max-width: 100%; /*250px*/
-  max-height: auto; /*250px*/
-  width: 200px;
-  height: 200px;
-  /* width: 100%; */
-  /* height: auto; */
-  border-radius: 5%;
-  /* napravi width-a : 50% za da e resposnive snimkata, no predi tova sled upload bii 200px 200px */
-}
-
-.row .col {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.books .row {
-  margin-top: 50px;
-}
-h4 {
-  font-size: 3vmin;
-  /* color: #fc036b; */
-  margin: 10px auto;
-}
-h5 {
-  font-size: 2vmin;
-  margin-bottom: 10px;
-  padding: 0px 40px;
-}
-.books .btn {
-  margin-top: 10px;
-  font-size: 20px;
-}
-/* About */
-
-.explore {
-  width: 100vw;
-  height: 100vh;
-  background-image: url('img/about2.jpg');
-  background-position: bottom;
-  background-size: cover;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-}
-.explore-content {
-  width: 60%;
-  padding: 50px;
-  color: black;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.explore-content h1 {
-  font-size: 7vmin;
-}
-.explore-content .line {
-  margin-bottom: 50px;
-}
-/* .explore-content p {
-  color: white;
-} */
-.explore-content .btn {
-  margin-top: 40px;
-}
-
-/* MOBILE / Media query  */
-
-/* screen: It is used to set the screen size of media query.
-The screen size can be set by using max-width and min-width.
-The screen size is differ from screen to screen. */
-
-/* only screen: The only keyword is used to prevent older browsers
- that do not support media queries with media features from applying the specified styles.*/
-@media only screen and (max-width: 1000px) {
-  .menu-btn {
-    display: block;
-  }
-  .navbar {
-    padding: 0;
-  }
-  .logo {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-  }
-  .nav-links {
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
-    background-color: #484872;
-    margin-top: -900px;
-    transition: all 0.5s ease;
-    border-bottom-right-radius: 30%;
-  }
-  .mobile-menu {
-    margin-top: 0px;
-  }
-  .nav-links li {
-    margin: 30px auto;
-  }
+.help-text {
+  font-style: italic;
+  font-variant: all-small-caps;
 }
