--- a/books/templates/books/about.html
+++ b/books/templates/books/about.html
@@ -10,7 +10,7 @@
       totam ducimus mollitia id dignissimos laboriosam ipsum, doloremque dolore
       deleniti, autem ullam quo assumenda quidem!
     </p>
-    <a href="#" class="btn">Library</a>
+    <a href="#" class="btn btn-outline-info m-3">Library</a>
   </div>
 </section>
 {% endblock content %}
