--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -3,7 +3,8 @@
   <div>
     <h2>Explore The Library</h2>
     <h1>A BOOK FOR YOU</h1>
-    <a href="{% url 'books_library' %}">Library</a>
+    <a class="btn btn-outline-info  m-3" href="{% url 'books_library' %}">Library</a>
   </div>
 </section>
 {% endblock content %}
+
