--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -1,10 +1,11 @@
-<!-- Update and Create Book Form -->
 {% extends "books/base.html" %} 
   {% block content %}
-    <form method="POST">
-      {% csrf_token %}
-      <h2>Are you sure you want to delete this book: "{{object.title}}"?</h2>
-      <button type="submit">Delete</button>
-      <a href="{% url 'book_details' object.id %}">Cancel</a>
-    </form>
+    <div class="container">
+      <form method="POST">
+        {% csrf_token %}
+        <h2>Are you sure you want to delete this book: "{{object.title}}"?</h2>
+        <button class="btn btn-danger  m-3" type="submit">Delete</button>
+        <a class="btn btn-secondary  m-3" href="{% url 'book_details' object.id %}">Cancel</a>
+      </form>
+    </div>
   {% endblock content%}
