--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,9 +1,11 @@
 {% extends "books/base.html" %}
 {% block content %}
   <h2> You have been logged out</h2>
-  <div>
+  <div class="border-top pt-3">
     <small>
-      <a href="{% url 'login' %}">Log In Again</a>    
+      <a class="btn btn-outline-info m-3" href="{% url 'login' %}">Log In Again</a>    
     </small>
   </div>
 {% endblock content %}
+
+
