--- a/books/templates/books/list_books.html
+++ b/books/templates/books/list_books.html
@@ -3,9 +3,9 @@
 	{% block content %}
   <div class="container">
     <div>
-      <h1 class="title text-center mb-5">
+      <h1 class="title text-center mb-5 mt-5">
       {% if request.resolver_match.url_name == 'my_books' %}
-        My Books
+        Shared By Me
       {% elif request.resolver_match.url_name == 'books_library' %}
         Library
       {% endif %}
