--- a/books/templates/books/list_books.html
+++ b/books/templates/books/list_books.html
@@ -12,14 +12,18 @@
       </h1>
     </div>
     <div class="row">
-    {% for book in books %}
-      <div class="col-lg-6 text-center mt-4 border-bottom border-primary">
-        <img src="{{ book.image.url }}" alt="no photo" class="rounded"/>
-        <h4 class="mt-3">{{ book.title }}</h4>
-        <h5>{{ book.author }}</h5>
-        <a href="{% url 'book_details' book.pk %}" class="btn btn-outline-info mt-1 mb-3">Learn More</a>
-      </div>
+    {% if books %}
+      {% for book in books %}
+        <div class="col-lg-6 text-center mt-4 border-bottom border-primary">
+          <img src="{{ book.image.url }}" alt="no photo" class="rounded"/>
+          <h4 class="mt-3">{{ book.title }}</h4>
+          <h5>{{ book.author }}</h5>
+          <a href="{% url 'book_details' book.pk %}" class="btn btn-outline-info mt-1 mb-3">Learn More</a>
+        </div>
       {% endfor %}
+    {% else %}
+      <h1 class="text-center">Share Your First Book !</h1>
+    {% endif %}
     </div>
   </div>
  {% endblock content%}
