--- a/books/templates/books/about.html
+++ b/books/templates/books/about.html
@@ -1,6 +1,7 @@
 {% extends "books/base.html" %} {% load static %} {% block content %}
 <!-- About -->
-<section class="explore">
+<div class="container text-center mt-5">
+  <section class="explore">
     <!-- cls -> div explore-content -->
   <div class="explore-content"> 
     <h1>Share A Book With The World</h1>
@@ -13,6 +14,7 @@
     <a href="#" class="btn btn-outline-info m-3">Library</a>
   </div>
 </section>
+</div>
 {% endblock content %}
 
 <!-- https://www.youtube.com/watch?v=ZdJSHEczi_0 -->
