--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -1,11 +1,11 @@
 {% extends "books/base.html" %} 
   {% block content %}
-    <div class="container">
+    <div class="container mt-5 text-center">
       <form method="POST">
         {% csrf_token %}
         <h2>Are you sure you want to delete this book: "{{object.title}}"?</h2>
-        <button class="btn btn-danger  m-3" type="submit">Delete</button>
-        <a class="btn btn-secondary  m-3" href="{% url 'book_details' object.id %}">Cancel</a>
+        <button class="btn btn-danger m-3" type="submit">Delete</button>
+        <a class="btn btn-secondary m-3" href="{% url 'book_details' pk=object.id slug=object.slug %}">Cancel</a>
       </form>
     </div>
   {% endblock content%}
