--- a/books/templates/books/list_books.html
+++ b/books/templates/books/list_books.html
@@ -18,7 +18,7 @@
           <img src="{{ book.image.url }}" alt="no photo" class="rounded"/>
           <h4 class="mt-3">{{ book.title }}</h4>
           <h5>{{ book.author }}</h5>
-          <a href="{% url 'book_details' book.pk %}" class="btn btn-outline-info mt-1 mb-3">Learn More</a>
+          <a href="{% url 'book_details' pk=book.pk slug=book.slug %}" class="btn btn-outline-info mt-1 mb-3">Learn More</a>
         </div>
       {% endfor %}
     {% else %}
