The practice more recommended for this is create an app that creates cohesion between other apps. URLS MODIFIED

--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,5 +1,5 @@
 <!-- Update and Create Book Form -->
-{% extends "books/base.html" %} 
+{% extends "website/base.html" %} 
   {% load crispy_forms_tags %}
   {% block content %}
   <div class="container">
