--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,4 +1,4 @@
-{% extends "books/base.html" %} {% block content %}
+{% extends "website/base.html" %} {% block content %}
 <div class="container text-center mt-5">
   <section>
     <div>
