--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "books/base.html" %} 
+{% extends "website/base.html" %} 
   {% block content %}
     <div class="container mt-5 text-center">
       <form method="POST">
