--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -1,4 +1,4 @@
-{% extends "books/base.html" %} {% block content%}
+{% extends "website/base.html" %} {% block content%}
 <div class="container">
   <div class="row align-items-center mt-5">
     <div class="col-lg-6 text-center">
