--- a/books/templates/books/list_books.html
+++ b/books/templates/books/list_books.html
@@ -1,4 +1,4 @@
-{% extends "books/base.html" %} 
+{% extends "website/base.html" %} 
 {% load static %} 
 	{% block content %}
   <div class="container">
