--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,4 +1,4 @@
-{% extends "books/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
 <div class="container mt-5 text-center">
   <h2> You have been logged out</h2>
