--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -1,4 +1,4 @@
-{% extends "books/base.html" %} {% load static %} {% block content %}
+{% extends "website/base.html" %} {% load static %} {% block content %}
 <!-- About -->
 <div class="container text-center mt-5">
   <section class="explore">
