--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,18 +1,24 @@
 {% extends "website/base.html" %} 
   {% load crispy_forms_tags %}
   {% block content %}
-  <div class="container">
-    <div class="content-section">
-      <form method="POST">
-        {% csrf_token %}
-        <fieldset class="form-group">
-          <legend class="border-bottom mb-4 mt-5">Register</legend>
-          {{ form|crispy }}
-        </fieldset>
-        <div class="form-group">
-          <button class="btn btn-outline-info mt-3" type="submit">Sign Up</button>
+  <div class="container mt-5">
+    <div class="row d-flex justify-content-center">
+      <div class="col-lg-6 p-4 border">
+        <div class="row d-flex justify-content-center">
+          <div class="content-section col-lg-6">
+            <form method="POST" enctype="multipart/form-data">
+              {% csrf_token %}
+              <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Register</legend>
+                {{ form|crispy }}
+              </fieldset>
+              <div class="form-group text-center">
+                <button class="btn btn-outline-info mt-3" type="submit">Sign Up</button>
+              </div>
+            </form>
+          </div>
         </div>
-      </form>
+      </div>
     </div>
   </div>
   {% endblock content%}
