--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,7 +5,7 @@
     <div class="row d-flex justify-content-center">
       <div class="col-lg-6 p-4 border">
         <div class="row">
-          <div class="media col-lg-6 mt-3">
+          <div class="media col-lg-6 mt-3 text-center">
             <img
               class="rounded-circle account-img"
               src="{{ user.profile.image.url }}"
