--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -9,14 +9,27 @@
             class="btn btn-primary ms-4"
             href="{% url 'books_update' pk=object.pk slug=object.slug %}"
             >Update</a
-          >
+            >
           <a class="btn btn-danger m-4" href="{% url 'books_delete' pk=object.id slug=object.slug %}"
             >Delete</a
-          >
+            >
+        </div>
+      {% elif user.is_authenticated %}
+        <div>
+          <a 
+            href="{% url 'profile_add_favourite' pk=object.pk %}" 
+            class="btn btn-outline-primary m-4">
+              {% if has_user_saved_book %}
+                Remove From Favourites
+              {% else %}
+                Add to Favourites
+              {% endif %}
+          </a>
         </div>
       {% endif %}
     </div>
     <div style="border-left: 2px solid #0DCAF0" class="col-lg-6 text-right mt-5">
+        
         <h1>{{object.title}}</h1>
         <h2>{{ object.author }}</h2>
         <h4>Language - {{ object.language }}</h4>
@@ -26,7 +39,7 @@
            <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
             <!-- object.date_posted|date:'l d-m-y' -->
           <h6>Shared by {{ object.posted_by }} on {{ object.date_posted|date:'l d-m-y' }}</h6>
-        </div>  
+        </div>
     </div>
   </div>
 </div>
