--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -55,6 +55,9 @@
               <a href="{% url 'my_books' %}" class="nav-link">My Books</a>
             </li>
             <li class="nav-item">
+              <a href="{% url 'profile_favourites' %}" class="nav-link">Saved Books</a>
+            </li>
+            <li class="nav-item">
               <a href="{% url 'profile' %}" class="nav-link">Profile</a>
             </li>
             <li class="nav-item">
