--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -27,13 +27,13 @@
       <div class="container">
         <a href="{% url 'books_library' %}" class="navbar-brand">EXPLORE</a>
 
-        <button 
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navmenu"
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
         >
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navmenu">
@@ -46,32 +46,46 @@
             </li>
           </ul>
           <!-- ms-auto -> https://stackoverflow.com/questions/41513463/bootstrap-align-navbar-items-to-the-right -->
-          {% if user.is_authenticated %}
-            <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
               <li class="nav-item">
                 <a href="{% url 'books_create' %}" class="nav-link">Share Book</a>
               </li>
-              <li class="nav-item">
-                <a href="{% url 'my_books' %}" class="nav-link">Shared Books</a>
-              </li>
-              <li class="nav-item">
-                <a href="{% url 'profile_favourites' %}" class="nav-link">Saved Books</a>
-              </li>
-              <li class="nav-item">
-                <a href="{% url 'profile' %}" class="nav-link">Profile</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a href="{% url 'logout' %}" class="nav-link">Logout</a>
-              </li>
-          {% else %}
-              <li class="nav-item">
-                <a href="{% url 'login' %}" class="nav-link">Login</a>
-              </li>
-              <li class="nav-item">
-                <a href="{% url 'register' %}" class="nav-link">Sign Up</a>
-              </li>
-            </ul>
-          {% endif %}
+              <div class="dropdown ms-3">
+                <a
+                  class="btn btn dropdown-toggle"
+                  href="javascript:void(0)"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    src="{{ user.profile.image.url }}"
+                    alt=""
+                    class="rounded-circle account-img img-responsive"
+                  />
+                </a>
+
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <li><a class="dropdown-item" href="{% url 'my_books' %}">Shared Books</a></li>
+                  <li><a class="dropdown-item" href="{% url 'profile_favourites' %}">Saved Books</a></li>
+                  <li><a class="dropdown-item" href="{% url 'profile' %}">Edit Profile</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                  </li>
+                </ul>
+              </div>  
+            {% else %}
+                <li class="nav-item">
+                  <a href="{% url 'login' %}" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a href="{% url 'register' %}" class="nav-link">Sign Up</a>
+                </li>
+          </ul>
+            {% endif %}
         </div>
       </div>
     </nav>
