login register hyperlinks in pages

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -17,6 +17,11 @@
               </div>
             </form>
           </div>
+          <div class="border-top pt-3 mt-5">
+            <small class="text-muted">
+              Already Have an Account ?<a class="ml-2" href="{% url 'login' %}"> Sign In</a>
+            </small>
+          </div>
         </div>
       </div>
     </div>
