--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,6 +17,11 @@
               </div>
             </form>
           </div>
+          <div class="border-top pt-3 mt-5">
+            <small class="text-muted">
+              Need an Account ?<a class="ml-2" href="{% url 'register' %}"> Sign Up Now</a>
+            </small>
+          </div>
         </div>
       </div>
     </div>
