--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -44,7 +44,7 @@
         <h1>{{object.title}}</h1>
         <h2>{{ object.author }}</h2>
         <h4>Language - {{ object.language }}</h4>
-        <h4>Genre - {{ object.genre }}</h4>
+        <h4>Genre - {{ object.get_genre_display }}</h4>
         <h5>{{object.description}}</h5>
         <div class="mt-5">
            <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
