--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -8,54 +8,64 @@
         Shared By Me 
       {% elif request.resolver_match.url_name == 'books_library' %}
         Library 
+      {% elif request.resolver_match.url_name == 'author_books' %}
+        Books written by: {{ view.kwargs.author }} 
       {% endif %}
     </h1>
   </div>
-  <div class="row">
-    {% if books %}
-     {% for book in books %}
-      <div class="col-lg-6 text-center mt-4 border-bottom border-info">
-        <img src="{{ book.image.url }}" alt="no photo" class="rounded" />
-        <h4 class="mt-3">{{ book.title }}</h4>
-        <h5>{{ book.author }}</h5>
-        <a
-          href="{% url 'books_details' pk=book.pk slug=book.slug %}"
-          class="btn btn-outline-info mt-1 mb-3"
-          >Learn More</a
-        >
-      </div>
+  {% if books %}
+    <div class="row border-bottom border-info">
+      {% for book in books %}
+        <div class="col-lg-6 text-center my-3">
+          <img src="{{ book.image.url }}" alt="no photo" class="rounded" />
+          <h4 class="mt-3">{{ book.title }}</h4>
+          <h5><a href="{% url 'author_books' book.author%}">{{ book.author }}</a></h5>
+          <a
+            href="{% url 'books_details' pk=book.pk slug=book.slug %}"
+            class="btn btn-outline-info mt-1 mb-3"
+            >Learn More</a
+          >
+        </div>
       {% endfor %}
-    {% else %}
-    <div class="text-center">
-      <h1>Share Your First Book !</h1>
-      <a href="{% url 'books_create' %}" class="btn btn-outline-info mt-5"
-        >Share Book</a
-      >
     </div>
-    {% endif %}
-  </div>
+      {% else %}
+      <div class="text-center">
+        {% if request.resolver_match.url_name == 'my_books' %}
+          <h1>Share Your First Book !</h1>
+          <a href="{% url 'books_create' %}" class="btn btn-outline-info mt-5"
+            >Share Book</a>
+        {% elif request.resolver_match.url_name == 'books_library' %}
+          <h1>No books in Library !</h1>
+          <a href="{% url 'website_home' %}" class="btn btn-outline-info mt-5"
+            >Home</a>
+        {% elif request.resolver_match.url_name == 'author_books' %}
+          <h1>No Books added yet !</h1>
+          <a href="{% url 'books_library' %}" class="btn btn-outline-info mt-5"
+            >Library</a>
+        {% endif %}
+      </div>
+  {% endif %}
   <!-- PAGINATION -->
   <div class="text-center">
     {% if is_paginated %}
-    {% if page_obj.has_previous %}
-      <a class="btn btn-outline-info my-4" href="?page=1">First</a>
-      <a class="btn btn-outline-info my-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+      {% if page_obj.has_previous %}
+        <a class="btn btn-outline-info my-4" href="?page=1">First</a>
+        <a class="btn btn-outline-info my-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+      {% endif %}
+
+      {% for page_num in page_obj.paginator.page_range %}
+        {% if page_obj.number == page_num %}
+        <a class="btn btn-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
+        {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %}
+          <a class="btn btn-outline-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
+        {% endif %} 
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+        <a class="btn btn-outline-info my-4" href="?page={{ page_obj.next_page_number}}">Next</a>
+        <a class="btn btn-outline-info my-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+      {% endif %}
     {% endif %}
-
-    {% for page_num in page_obj.paginator.page_range %}
-      {% if page_obj.number == page_num %}
-       <a class="btn btn-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
-      {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %}
-        <a class="btn btn-outline-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
-      {% endif %} 
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-      <a class="btn btn-outline-info my-4" href="?page={{ page_obj.next_page_number}}">Next</a>
-      <a class="btn btn-outline-info my-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-    {% endif %}
-
-  {% endif %}
   </div>
 </div>
 {% endblock content%}
