--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -11,7 +11,7 @@
       totam ducimus mollitia id dignissimos laboriosam ipsum, doloremque dolore
       deleniti, autem ullam quo assumenda quidem!
     </p>
-    <a href="#" class="btn btn-outline-info m-3">Library</a>
+    <a href="{% url 'books_library' %}" class="btn btn-outline-info m-3">Library</a>
   </div>
 </section>
 </div>
