change the approach of css in project, https://docs.djangoproject.com/en/4.0/howto/static-files/#configuring-static-files

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -18,7 +18,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{% static 'website/main.css' %}"
+      href="{% static 'main.css' %}"
     />
     <title>Library</title>
   </head>
