--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -49,7 +49,7 @@
         <div class="mt-5">
            <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
             <!-- object.date_posted|date:'l d-m-y' -->
-          <h6>Shared by {{ object.posted_by }} on {{ object.date_posted|date:'l d-m-y' }}</h6>
+          <h6>Shared by {{ object.posted_by }} on {{ object.date_posted|date:'l d-m-y, P' }}</h6>
         </div>
     </div>
     </div>
