add total likes func

--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -64,6 +64,7 @@
           {% endif %}
         </div>
       {% endif %}
+    Likes: {{ number_of_likes }}
     </div>
     <div class="col-lg-6 text-right mt-5 px-3">
       <div style="border-left: 2px solid #0DCAF0" class="px-3">     
